# homelab-saltstack

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  README.md  SECURITY.md  towncrier.toml
conf/: minion.conf
docs/: VAULT_SALT_SETUP.md  links.md
pillar/: nlremote.sls  postgres.sls  top.sls
pillar/application/: docker.sls  grafana.sls  heimdall2.sls  homepage.sls  linkwarden.sls  netbox.sls  plex.sls  tailscale.sls  zabbix.sls  zabbixagent.sls
pillar/common/: extra_hosts.sls  hosts.sls  schedule.sls  security.sls  timesync.sls  vault_secrets.sls
pillar/database/: postgres.sls
salt/: .base_linux.sls.swp  brew_update.sls  install_docker.sls  install_qemu_agent.sls  install_vim.sls  linux_patch.sls  top.sls
salt/application/: docker.sls  fing.sls  homepage.sls  linkwarden.sls  netbox.sls  tailnet-service.sls  tailscale-docker.sls  tailscale.sls  vault.sls  webdriver.sls
salt/application/grafana/: init.sls
salt/application/heimdall2/: init.sls
salt/application/homepage/: init.sls
salt/application/netbox/: config.sls  docker-compose-netbox.jinja  (+9 more)
salt/application/plex/files/: plex-monitor.py  plex.conf  pyproject.toml  template_app_plex.yaml
salt/common/: debug.sls  hostfile.sls  hosts.sls  init.sls  mine_functions.sls  schedule.sls  timesync.sls
salt/files/: base_linux_packages.txt  docker_packages.txt
salt/hardware/: pi.sls
salt/linux/: base_linux.sls
salt/netbox/: gunicorn.sls  netbox.sls  packages.sls
salt/postgres/: backup.sls  database.sls  init.sls
vault/: homepage-policy.hcl  salt-policy.hcl  zabbix-policy.hcl
(+42 files in other folders)
